# RL_basic

./: .gitignore  ABLATION_STUDY_COMPLETE.md  BEHAVIORAL_PLOTS_COMPLETE.md  HALFCHEETAH_PRELEC_HYPERBOLIC_ANALYSIS.md  HALFCHEETAH_STEP_NORMALIZED_ANALYSIS.md  README.md  ablation_study_analysis.md  ablation_summary.csv  ablation_summary_table.md  analyze_ablation_experiments.py  analyze_halfcheetah_experiments.py  analyze_halfcheetah_normalized.py  analyze_step_counts.py  create_parameter_heatmaps.py  experiment_parameters.json  experiment_summary.csv  experiment_summary_table.md  extract_experiment_parameters.py  generate_behavioral_plots.py  halfcheetah_step_normalized_results.json  hyperbolic_ablation_analysis.py  hyperbolic_ablation_detailed_results.json  instructions.md  main.py  parameter_heatmap_results.json  pyproject.toml  research_analysis_halfcheetah_choquet_sac.md  test_reinforce.py
behavioral/: __init__.py  discounting.py  distortions.py  reference.py
examples/: behavioral_sac.py  behavioral_sac_improved.py  choquet_hyperbolic_ablation.py  choquet_sac.py  choquet_standard_ablation.py  cpt_sac.py  cpt_value_iteration_example.py  financial_cliff_walking_example.py  financial_cpt_demo.py  policy_iteration_example.py  qlearning_example.py  sarsa_example.py  simple_financial_cpt.py  standard_hyperbolic_ablation.py  value_iteration_example.py
logs/comparison_reinforce_coordinates/: events.out.tfevents.1756248351.192.168.1.104.26672.0  events.out.tfevents.1756248385.192.168.1.104.26934.0  events.out.tfevents.1756248464.192.168.1.104.27761.0  reinforce_final.pt  (+7 more)
src/: __init__.py
tests/: test_basic.py
(+15 files in other folders)
