[project]
name = "rl-gridworld"
version = "0.1.0"
description = "Reinforcement Learning algorithms on a 5x5 Stochastic Gridworld"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium[mujoco]==0.29.1",
    "gym==0.23.1",
    "matplotlib>=3.10.5",
    "numpy==1.24.4",
    "seaborn>=0.13.2",
    "tensorboard==2.11.2",
    "torch>=2.8.0",
    "tyro>=0.7.0",
    "psutil==5.9.5",
    "mujoco>=3.3.6",
    "wandb==0.13.11",
    "colorama==0.4.4",
]

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]
